--- a/ejemplo01b/src/main/resources/application.properties
+++ b/ejemplo01b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.contextPath=/ejemplo01b
-spring.datasource.url=jdbc:mysql://localhost:3307/ejemplo
+server.servlet.contextPath=/ejemplo01b
+spring.datasource.url=jdbc:mysql://localhost:3307/ejemplo?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.name=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver 
